--- a/src/main/webapp/resources/base.css
+++ b/src/main/webapp/resources/base.css
@@ -1,12 +1,82 @@
 body {
   background: cornflowerblue; 
-  color: white; 
+  color: darkblue; 
   font-family: 'Ubuntu', sans-serif;
+}
+
+h2 {
+  color: skyblue;
   text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.8);
+}
+nav {
+  margin-bottom: 40px;
+  margin-top: 20px;
+  padding-bottom: 10px;
   background-image: linear-gradient(cornflowerblue,skyblue); 
 }
 
 nav a {
   margin-left: 20px;
   margin-right: 20px;
+  text-decoration: none;
+}
+ nav img:hover {
+    box-shadow: 2px 2px 2px #dfdfdf;
+ }
+
+.menuimg {
+  width: 40px;
+  height: 40px;
+  padding: 4px;
+}
+
+.skyrow {
+  background: skyblue;
+}
+
+.cornrow {
+  background: cornflowerblue
+}
+
+footer {
+  position: fixed;
+  margin-top: 40px;
+  font-size: small;
+  padding: 5px;
+  width: 98%;
+  background-image: linear-gradient(skyblue, cornflowerblue); 
+  text-align: right;
+}
+
+
+.button {
+   border-top: 1px solid #96d1f8;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+   background: -o-linear-gradient(top, #3e779d, #65a9d7);
+   padding: 8px 16px;
+   -webkit-border-radius: 39px;
+   -moz-border-radius: 39px;
+   border-radius: 39px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: darkblue;
+   text-decoration: none;
+   vertical-align: middle;
+}
+
+.button:hover {
+   border-top-color: #28597a;
+   background: #28597a;
+   color: #ccc;
+}
+
+.button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
 }
